# Python-Practicing

./: .gitignore  pyproject.toml
DISC/: disc05.pdf.1
DISC/disc01/: q1.py  q2.py  q3.py  q4.py  q5.py  q6.py  q7_and_q8.md
DISC/disc02/: q1_q2_q3q4.md  q1_q2_q3q4q6.md  q5.py  q7.py
DISC/disc03/: q1.py  q2.md  q3.py  q4.py  q5.py  q6.py  q7.py  q8.py
DISC/disc06/: q1q2.py
DISC/disc07/: q1.py  q2.py  q3.py  q4.py  q6.py  q7.py  tree_and_list.py
DISC/disc08/: ans.scm
HW/hw01/: hw01.py
HW/hw02/: hw02.py
HW/hw03/: hw03.py
HW/hw04/: hw04.py
LAB/lab01/: lab01_ans.py  what_if.py
LAB/lab02/: lab02.py  lab02_ans.py  q1.md
LAB/lab03/: lab03.py  lab03_ans.py
LAB/lab04/: lab04.py
LAB/lab05/: lab05.py  lab05_ans.py
LAB/lab06/: lab06.py
LAB/lab07/: lab07-ans.py
LAB/lab08/: lab08-sol.scm
LAB/lab09/: README.md
LAB/lab10/: lab10-sol.scm
LAB/lab11/: lab11.py  lab11.sql
PROJECT/ants/: ants.py
PROJECT/cats/: cats.py
PROJECT/hog/: hog.py
PROJECT/lambdaing/: cardgame.py
