[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Adam-Teng", email = "656081024@qq.com"},
]
dependencies = [
    "flake8>=4.0.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
